--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,14 @@ body {
     width:100%; 
     height: 700px;
   }
+
+  a:link {
+    color:#165C0F;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  a:hover {
+    color: green;
+    background-color: transparent;
+    text-decoration: underline;
+  }
