--- a/static/test/templates/index.html
+++ b/static/test/templates/index.html
@@ -13,7 +13,8 @@
     <div id="plot"></div>
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="race_gender.js"></script>
+    <script src="/static/js/using_db.js"></script>
+    <!-- <script src="/static/js/race_gender.js"></script> -->
 
 </body>
 
