Add Comments and clarify file names

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     crossorigin=""></script>
     <script type="text/javascript" src="static/js/config.js"></script>
     <script type="text/javascript" src="static/js/dataVars.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/mapLogic.js"></script>
     <script type="text/javascript" src="static/js/heatmap.js"></script>
     <script type="text/javascript" src="static/js/choropleth.js"></script>
     <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
