--- a/templates/choropleth.html
+++ b/templates/choropleth.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <title>GA Traffic Stops</title>
+    <title>Choropleth  Map</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
@@ -32,8 +32,6 @@
     <script type="text/javascript" src="static/js/config.js"></script>
     <script type="text/javascript" src="static/js/dataVars.js"></script>
     <script type="text/javascript" src="static/js/mapLogic.js"></script>
-    <!-- <script type="text/javascript" src="static/js/heatmap.js"></script> -->
     <script type="text/javascript" src="static/js/choropleth.js"></script>
-    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
   </body>
 </html>
