--- a/templates/countySummary.html
+++ b/templates/countySummary.html
@@ -18,11 +18,22 @@
     <script type="text/javascript" src="static/extLibrary/jqwidgets-ver11.0.1/jqwidgets/jqxchart.core.js"></script>
     <script type="text/javascript" src="static/extLibrary/jqwidgets-ver11.0.1/jqwidgets/jqxdraw.js"></script>
     <script type="text/javascript" src="static/extLibrary/jqwidgets-ver11.0.1/jqwidgets/jqxdata.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
   </head>
   <body>
-
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="countySummary.html">Georgia Traffic</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="countySummary.html">Dashboard</a></li>
+          <li><a href="index.html"> Choropleth  Map </a></li>
+          <li><a href="heatmap.html">Heat Map</a></li>
+          <li><a href="D3.html"> General Statistics </a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-12 jumbotron text-center">
@@ -64,13 +75,11 @@
         </div>
       </div>
     </div>
-    
-    
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/dataVars.js"></script>
-    <script type="text/javascript" src="static/js/countySummaryFuncs.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/dataVars.js"></script>
+    <script type="text/javascript" src="../static/js/countySummaryFuncs.js"></script>
   </body>
 </html>
