--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <title>Heaatmap</title>
+    <title>Heatmap</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -11,6 +12,19 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="countySummary.html">Georgia Traffic</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="countySummary.html">Dashboard</a></li>
+          <li><a href="index.html"> Choropleth  Map </a></li>
+          <li><a href="heatmap.html">Heat Map</a></li>
+          <li><a href="D3.html"> General Statistics </a></li>
+        </ul>
+      </div>
+    </nav>
     <div id="map"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
