--- a/templates/countySummary.html
+++ b/templates/countySummary.html
@@ -28,9 +28,9 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="countySummary.html">Dashboard</a></li>
-          <li><a href="index.html"> Choropleth  Map </a></li>
+          <li><a href="choropleth.html"> Choropleth  Map </a></li>
           <li><a href="heatmap.html">Heat Map</a></li>
-          <li><a href="D3.html"> General Statistics </a></li>
+          <li><a href="generalStats.html"> General Statistics </a></li>
         </ul>
       </div>
     </nav>
